Chore : Updated the Terrain Style Legend

--- a/templates/mws-report.html
+++ b/templates/mws-report.html
@@ -1119,11 +1119,11 @@
                 </div>
                 <div class="legend-item">
                     <div class="legend-color" style="background-color: #4575b4;"></div>
-                    <span>Lateral midslope incised drainages, Local valleys in plains</span>
+                    <span>Incised drainages and low ridges</span>
                 </div>
                 <div class="legend-item">
                     <div class="legend-color" style="background-color: #a50026;"></div>
-                    <span>Upland incised drainages, Stream headwaters</span>
+                    <span>Mountain tops and high ridges</span>
                 </div>
                 <div class="legend-item">
                     <div class="legend-color" style="background-color: #e0f3f8;"></div>
@@ -1139,23 +1139,11 @@
                 </div>
                 <div class="legend-item">
                     <div class="legend-color" style="background-color: #f46d43;"></div>
-                    <span>Mesa tops</span>
+                    <span>Flat tops</span>
                 </div>
                 <div class="legend-item">
                     <div class="legend-color" style="background-color: #d73027;"></div>
                     <span>Upper Slopes</span>
-                </div>
-                <div class="legend-item">
-                    <div class="legend-color" style="background-color: #91bfdb;"></div>
-                    <span>Local ridge/hilltops within broad valleys</span>
-                </div>
-                <div class="legend-item">
-                    <div class="legend-color" style="background-color: #800000;"></div>
-                    <span>Lateral midslope drainage divides, Local ridges in plains</span>
-                </div>
-                <div class="legend-item">
-                    <div class="legend-color" style="background-color: #4d0000;"></div>
-                    <span>Mountain tops, high ridges</span>
                 </div>
             </div>
 
